--- a/css/style.css
+++ b/css/style.css
@@ -1,156 +1,159 @@
 /*COLORS*/
 /*MEDIA QUERY*/
 /* Small devices (tablets, 768px and up) */
-@media (max-width: 767px) { /* line 15, ../sass/style.scss */
+@media (max-width: 767px) { /* line 17, ../sass/style.scss */
   .sidebar { padding-top: 30px; }
-  /* line 18, ../sass/style.scss */
+  /* line 20, ../sass/style.scss */
   .mainContent { max-width: 767px; }
-  /* line 21, ../sass/style.scss */
+  /* line 23, ../sass/style.scss */
   .navbar-inverse .navbar-inner .social-icon { display: none; }
-  /* line 25, ../sass/style.scss */
+  /* line 27, ../sass/style.scss */
   .navbar-inverse .nav-collapse .nav > li > a, .navbar-inverse .nav-collapse .dropdown-menu a { margin: 0 0 27px; } }
 /* Medium devices (desktops, 992px and up) */
-@media (min-width: 980px) { /* line 32, ../sass/style.scss */
+@media (min-width: 980px) { /* line 34, ../sass/style.scss */
   body { padding-top: 60px; padding-bottom: 40px; }
-  /* line 36, ../sass/style.scss */
+  /* line 38, ../sass/style.scss */
   .mainContent { max-width: 980px; } }
 /* Large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) { /* line 43, ../sass/style.scss */
+@media (min-width: 1200px) { /* line 45, ../sass/style.scss */
   .mainContent { max-width: 1280px; } }
 /*FONTS*/
 @font-face { font-family: 'league_gothic_extended_italRg'; src: url("/fonts/league_ghotic_extended-webfont-webfont.eot"); src: url("/fonts/league_ghotic_extended-webfont-webfont.eot?#iefix") format("embedded-opentype"), url("/fonts/league_ghotic_extended-webfont-webfont.woff2") format("woff2"), url("/fonts/league_ghotic_extended-webfont-webfont.woff") format("woff"), url("/fonts/league_ghotic_extended-webfont-webfont.ttf") format("truetype"), url("/fonts/league_ghotic_extended-webfont-webfont.svg#league_gothic_extended_italRg") format("svg"); font-weight: normal; font-style: normal; }
 @font-face { font-family: 'league_gothic_extendedregular'; src: url("/fonts/league_ghotic_extended-webfont.eot"); src: url("/fonts/league_ghotic_extended-webfont.eot?#iefix") format("embedded-opentype"), url("/fonts/league_ghotic_extended-webfont.woff2") format("woff2"), url("/fonts/league_ghotic_extended-webfont.woff") format("woff"), url("/fonts/league_ghotic_extended-webfont.ttf") format("truetype"), url("/fonts/league_ghotic_extended-webfont.svg#league_gothic_extendedregular") format("svg"); font-weight: normal; font-style: normal; }
 /*GENERAL STYLES*/
-/* line 78, ../sass/style.scss */
+/* line 80, ../sass/style.scss */
+body { background: white; }
+
+/* line 84, ../sass/style.scss */
 body, h4, h5, h6, p, a { font-family: 'Gotham A', 'Gotham B'; color: #393b3d; }
 
-/* line 83, ../sass/style.scss */
+/* line 89, ../sass/style.scss */
 h1, h2, h3 { font-family: 'league_gothic_extendedregular'; color: #393b3d; font-weight: normal; }
 
-/* line 89, ../sass/style.scss */
+/* line 95, ../sass/style.scss */
 h4 { font-size: 17px; }
 
-/* line 93, ../sass/style.scss */
+/* line 99, ../sass/style.scss */
 a, a:hover, a:focus { outline: none; }
 
-/* line 97, ../sass/style.scss */
+/* line 103, ../sass/style.scss */
 a:hover { color: black; }
 
-/* line 101, ../sass/style.scss */
+/* line 107, ../sass/style.scss */
 h4 small { display: block; font-size: 60%; color: #888; }
 
-/* line 108, ../sass/style.scss */
+/* line 114, ../sass/style.scss */
 .mainContent { margin: 0 auto; }
-/* line 111, ../sass/style.scss */
+/* line 117, ../sass/style.scss */
 .mainContent h2 { text-align: center; margin: 0 auto; padding-top: 87px; text-transform: uppercase; font-size: 61px; }
-/* line 121, ../sass/style.scss */
+/* line 127, ../sass/style.scss */
 .mainContent .row-fluid .subtext { font-size: 19px; margin: 0 auto; padding: 30px 0; text-align: center; width: 100%; }
-/* line 129, ../sass/style.scss */
+/* line 135, ../sass/style.scss */
 .mainContent .row-fluid .col1, .mainContent .row-fluid .col2, .mainContent .row-fluid .col3 { padding: 120px 20px 20px; background: url("/images/about-bg-0.png") no-repeat top center; margin: 80px 0; text-align: center; text-justify: inter-word; }
-/* line 137, ../sass/style.scss */
+/* line 143, ../sass/style.scss */
 .mainContent .row-fluid .col2 { background: url("/images/about-bg-1.png") no-repeat top center; }
-/* line 141, ../sass/style.scss */
+/* line 147, ../sass/style.scss */
 .mainContent .row-fluid .col3 { background: url("/images/about-bg-2.png") no-repeat top center; }
-/* line 145, ../sass/style.scss */
+/* line 151, ../sass/style.scss */
 .mainContent .row-fluid .col1.help { background: url("/images/help-bg-1.png") no-repeat top center; }
-/* line 149, ../sass/style.scss */
+/* line 155, ../sass/style.scss */
 .mainContent .row-fluid .col2.help { background: url("/images/help-bg-2.png") no-repeat top center; }
-/* line 153, ../sass/style.scss */
+/* line 159, ../sass/style.scss */
 .mainContent .row-fluid .col3.help { background: url("/images/help-bg-3.png") no-repeat top center; }
 
 /*Header and navbar*/
-/* line 162, ../sass/style.scss */
+/* line 168, ../sass/style.scss */
 .navbar .container-fluid { padding: 0px; margin: 0px; }
 
-/* line 167, ../sass/style.scss */
+/* line 173, ../sass/style.scss */
 .navbar .brand { padding: 0px; margin: 0px; width: 90px; height: 90px; }
 
-/* line 175, ../sass/style.scss */
-.navbar-inverse .navbar-inner { background: #f5f5f5; height: 90px; border: none; }
 /* line 181, ../sass/style.scss */
+.navbar-inverse .navbar-inner { background: #f5f5f5; height: 90px; border: none; }
+/* line 187, ../sass/style.scss */
 .navbar-inverse .navbar-inner .nav-collapse.collapse { float: right; max-width: 950px; }
-/* line 186, ../sass/style.scss */
+/* line 192, ../sass/style.scss */
 .navbar-inverse .navbar-inner .lang { float: right; width: 46px; list-style: none; margin: 0px; padding: 0px; position: relative; right: 14px; }
-/* line 196, ../sass/style.scss */
+/* line 202, ../sass/style.scss */
 .navbar-inverse .navbar-inner .lang > li > a { color: #ff7c18; }
-/* line 201, ../sass/style.scss */
+/* line 207, ../sass/style.scss */
 .navbar-inverse .navbar-inner .social-icon { float: right; width: 120px; list-style: none; margin: 0px; padding: 16px 0px; }
-/* line 210, ../sass/style.scss */
+/* line 216, ../sass/style.scss */
 .navbar-inverse .navbar-inner .social-icon > li { width: 40px; margin: 0px; padding: 0px; overflow: hidden; float: left; display: block; height: 44px; background: url("/images/social-icon.png") no-repeat scroll; }
-/* line 221, ../sass/style.scss */
+/* line 227, ../sass/style.scss */
 .navbar-inverse .navbar-inner .social-icon > li.facebook { background-position: -91px -4px; }
-/* line 225, ../sass/style.scss */
+/* line 231, ../sass/style.scss */
 .navbar-inverse .navbar-inner .social-icon > li.twitter { background-position: -1px -4px; }
-/* line 229, ../sass/style.scss */
+/* line 235, ../sass/style.scss */
 .navbar-inverse .navbar-inner .social-icon > li.google { background-position: -45px -4px; }
-/* line 233, ../sass/style.scss */
+/* line 239, ../sass/style.scss */
 .navbar-inverse .navbar-inner .social-icon > li > a { width: 40px; height: 40px; margin: 0px; padding: 24px 11px; color: transparent; font-size: 3px; overflow: hidden; }
-/* line 242, ../sass/style.scss */
+/* line 248, ../sass/style.scss */
 .navbar-inverse .navbar-inner .btn-navbar { background: url(/images/menu.png); height: 88px; width: 88px; float: right; margin: 0px; padding: 0px; border: none; }
-/* line 252, ../sass/style.scss */
+/* line 258, ../sass/style.scss */
 .navbar-inverse .brand, .navbar-inverse .nav { margin: 0px; padding: 0px; }
 
-/* line 259, ../sass/style.scss */
+/* line 265, ../sass/style.scss */
 .lang > li, .social-icon > li, .navbar-inverse .nav > li { margin-top: 35px; }
 
-/* line 264, ../sass/style.scss */
+/* line 270, ../sass/style.scss */
 .lang > li > a, .social-icon > li > a, .navbar-inverse .nav > li > a { color: #473934; text-transform: uppercase; padding: 0 15px; font-weight: bold; }
 
-/* line 273, ../sass/style.scss */
+/* line 279, ../sass/style.scss */
 html, body { height: 100%; }
 
-/* line 277, ../sass/style.scss */
+/* line 283, ../sass/style.scss */
 .wrapper { min-height: 100%; height: auto !important; /* This line and the next line are not necessary unless you need IE6 support */ height: 100%; margin: 0 auto -155px; /* the bottom margin is the negative value of the footer's height */ }
 
-/* line 284, ../sass/style.scss */
+/* line 290, ../sass/style.scss */
 footer, .push { height: 232px; }
 
-/* line 288, ../sass/style.scss */
+/* line 294, ../sass/style.scss */
 footer { background: #393b3d; }
 
 /*SLIDER front*/
-/* line 294, ../sass/style.scss */
+/* line 300, ../sass/style.scss */
 .jssorb05 { position: absolute; bottom: 85px; right: 6px; }
 
 /*Banner slides*/
-/* line 302, ../sass/style.scss */
+/* line 308, ../sass/style.scss */
 #slider1 .logo-banner { left: 42%; background: url(/images/logo-baner.png) top center no-repeat; background-size: 205px 205px; position: absolute; text-align: center; top: 13%; width: 205px; height: 205px; z-index: 10000; }
-/* line 314, ../sass/style.scss */
+/* line 320, ../sass/style.scss */
 #slider1 .background-layer { left: 0; position: absolute; text-align: center; width: 100%; height: 100%; z-index: 5000; background-color: rgba(0, 0, 0, 0.5); }
-/* line 324, ../sass/style.scss */
+/* line 330, ../sass/style.scss */
 #slider1 h3 { color: #f7f5f1; left: 16%; font-size: 40px; font-weight: normal; position: absolute; text-align: center; top: 52%; width: 69%; z-index: 10000; }
-/* line 336, ../sass/style.scss */
+/* line 342, ../sass/style.scss */
 #slider1 .go-to-github, #slider1 .read-more { position: absolute; width: 196px; height: 44px; top: 71%; z-index: 10000; line-height: 10px; text-align: center; text-transform: uppercase; font-size: 8px; color: transparent; }
-/* line 349, ../sass/style.scss */
-#slider1 .go-to-github:hover, #slider1 .read-more:hover { outline: none; text-decoration: none; }
 /* line 355, ../sass/style.scss */
+#slider1 .go-to-github:hover, #slider1 .read-more:hover { outline: none; text-decoration: none; }
+/* line 361, ../sass/style.scss */
 #slider1 .go-to-github { left: 35%; background: url(/images/banner-button1.png) top center no-repeat; background-size: 196px 44px; }
-/* line 362, ../sass/style.scss */
+/* line 368, ../sass/style.scss */
 #slider1 .read-more { left: 50%; background: url(/images/banner-button2.png) top center no-repeat; background-size: 196px 44px; }
-/* line 369, ../sass/style.scss */
-#slider1 .go-to-about { left: 49%; background: url(/images/down.png) top center no-repeat; background-size: 15px 10px; text-align: center; position: absolute; width: 15px; height: 10px; top: 95%; z-index: 10000; }
-/* line 380, ../sass/style.scss */
+/* line 375, ../sass/style.scss */
+#slider1 .go-to-about { left: 49.5%; background: url(/images/down.png) top center no-repeat; background-size: 15px 10px; text-align: center; position: absolute; width: 15px; height: 10px; top: 95%; z-index: 10000; }
+/* line 386, ../sass/style.scss */
 #slider1 .go-to-about:hover { background: url(/images/down.png) top center no-repeat; background-size: 15px 10px; outline: none; }
 
-/* line 390, ../sass/style.scss */
+/* line 396, ../sass/style.scss */
 #slider2 { background: #f3f3f3; }
-/* line 393, ../sass/style.scss */
+/* line 399, ../sass/style.scss */
 #slider2 .data { float: right; position: relative; }
-/* line 397, ../sass/style.scss */
+/* line 403, ../sass/style.scss */
 #slider2 .data img { height: 60px; left: 10%; margin-top: 40px; position: relative; width: 70px; z-index: 11111; }
-/* line 407, ../sass/style.scss */
+/* line 413, ../sass/style.scss */
 #slider2 .data h2 { position: relative; z-index: 11111; left: 10%; font-size: 43px; max-width: 50%; margin: 30px 0; }
-/* line 416, ../sass/style.scss */
+/* line 422, ../sass/style.scss */
 #slider2 .data h4 { left: 10%; position: relative; z-index: 11111; font-size: 15px; }
-/* line 423, ../sass/style.scss */
+/* line 429, ../sass/style.scss */
 #slider2 .data h5 { left: 10%; position: relative; z-index: 11111; font-size: 12px; }
-/* line 430, ../sass/style.scss */
+/* line 436, ../sass/style.scss */
 #slider2 .data > ul { width: 100%; left: 10%; position: relative; z-index: 11111; marigin: 0px; padding: 0px; }
-/* line 438, ../sass/style.scss */
+/* line 444, ../sass/style.scss */
 #slider2 .data > ul li { font-size: 11px; list-style-image: url("/images/check_icon.png"); }
-/* line 442, ../sass/style.scss */
+/* line 448, ../sass/style.scss */
 #slider2 .data > ul li ul { position: relative; margin-bottom: 20px; }
-/* line 451, ../sass/style.scss */
+/* line 457, ../sass/style.scss */
 #slider2 .half { display: inline; height: 100%; margin: 0; padding: 0; width: 50%; }
 
 /*SLIDERS*/
@@ -163,25 +166,25 @@ footer { background: #393b3d; }
 .jssorb05 .av:hover     (active mouseover)
 .jssorb05 .dn           (mousedown)
 */
-/* line 473, ../sass/style.scss */
-.jssorb05 { position: absolute; top: 85%; left: 47%; }
-
-/* line 480, ../sass/style.scss */
-.jssorb21 { left: 56%; position: absolute; top: 89%; }
+/* line 479, ../sass/style.scss */
+.jssorb05 { position: absolute; top: 85%; left: 48%; }
 
 /* line 486, ../sass/style.scss */
+.jssorb21 { left: 56%; position: absolute; top: 89%; }
+
+/* line 492, ../sass/style.scss */
 .jssorb21 div, .jssorb21 div:hover, .jssorb21 .av, .jssorb05 div, .jssorb05 div:hover, .jssorb05 .av { background: url(/images/slider_dots.png) no-repeat; overflow: hidden; cursor: pointer; width: 15px !important; }
 
-/* line 495, ../sass/style.scss */
+/* line 501, ../sass/style.scss */
 .jssorb21 div, .jssorb05 div { background-position: 1px 0; }
 
-/* line 500, ../sass/style.scss */
+/* line 506, ../sass/style.scss */
 .jssorb21 div:hover, .jssorb21 .av:hover, .jssorb05 div:hover, .jssorb05 .av:hover { background-position: -15px 0; }
 
-/* line 505, ../sass/style.scss */
+/* line 511, ../sass/style.scss */
 .jssorb21 .av, .jssorb05 .av { background-position: -15px 0; }
 
-/* line 511, ../sass/style.scss */
+/* line 517, ../sass/style.scss */
 .jssorb05 .dn, .jssorb05 .dn:hover { background-position: -15px 0; }
 
 /*<!-- Arrow Navigator Skin Begin -->*/
@@ -194,71 +197,74 @@ footer { background: #393b3d; }
 .jssora21ldn            (mousedown)
 .jssora21rdn            (mousedown)
 */
-/* line 526, ../sass/style.scss */
+/* line 532, ../sass/style.scss */
 .jssora21l, .jssora21r, .jssora21ldn, .jssora21rdn { position: absolute; cursor: pointer; display: block; background: url(/images/prev_arrow.png) center center no-repeat; overflow: hidden; width: 79px; height: 79px; }
 
-/* line 536, ../sass/style.scss */
+/* line 542, ../sass/style.scss */
 .jssora21r, .jssora21rdn { background: url(/images/next_arrow.png) center center no-repeat; }
 
-/* line 539, ../sass/style.scss */
+/* line 545, ../sass/style.scss */
 .jssora21r, .jssora21l { background-position: 0px -79px; }
 
-/* line 544, ../sass/style.scss */
+/* line 550, ../sass/style.scss */
 .jssora21rdn, .jssora21ldn, .jssora21r:hover, .jssora21l:hover { background-position: 0px 0px; }
 
 /*News CSS*/
-/* line 553, ../sass/style.scss */
+/* line 559, ../sass/style.scss */
 .news { background: url(/images/bg.jpg) top center repeat; color: #f7f5f1; }
-/* line 557, ../sass/style.scss */
+/* line 563, ../sass/style.scss */
 .news .background-layer { left: 0; position: absolute; text-align: center; width: 100%; height: 276px; z-index: 500; background-color: rgba(0, 0, 0, 0.5); }
-/* line 566, ../sass/style.scss */
+/* line 572, ../sass/style.scss */
 .news .mainContent { z-index: 501; position: relative; }
-/* line 570, ../sass/style.scss */
+/* line 576, ../sass/style.scss */
 .news .mainContent h2 { color: #f7f5f1; }
-/* line 574, ../sass/style.scss */
+/* line 580, ../sass/style.scss */
 .news .mainContent .subtext { font-size: 21px; padding: 30px 0 100px; width: 100%; }
 
 /*TEAM*/
-/* line 585, ../sass/style.scss */
-.people { margin-bottom: 40px; height: 315px; width: 307px; }
-/* line 590, ../sass/style.scss */
-.people .text { border: 3px red; cursor: pointer; display: block; }
+/* line 592, ../sass/style.scss */
+.team-wrapper, .team, .team-list { background: #f5f5f5; }
 
-/* line 597, ../sass/style.scss */
+/* line 596, ../sass/style.scss */
+.people { margin-bottom: 40px; height: 315px; width: 307px; background: white; }
+/* line 602, ../sass/style.scss */
+.people .text { border: 3px red; cursor: pointer; display: block; font-size: 12px; line-height: 18px; }
+
+/* line 611, ../sass/style.scss */
 .team-list { margin-top: 50px; }
 
-/* line 601, ../sass/style.scss */
+/* line 615, ../sass/style.scss */
 #join-us { background: #00c443 url(/images/join-bg.png) center 10px no-repeat; height: 315px; width: 307px; }
-/* line 605, ../sass/style.scss */
+/* line 619, ../sass/style.scss */
 #join-us .center { text-align: center; margin-left: auto; margin-right: auto; margin-top: 185px; margin-bottom: 40px; }
-/* line 612, ../sass/style.scss */
-#join-us .center .button, #join-us .center .button:hover { border: solid #006224 2px; font-size: 18px; padding: 15px 40px; text-transform: uppercase; text-decoration: none; font-weight: bold; }
-/* line 623, ../sass/style.scss */
-#join-us .text { text-align: center; }
 /* line 626, ../sass/style.scss */
+#join-us .center .button, #join-us .center .button:hover { border: solid #006224 2px; font-size: 18px; padding: 15px 40px; text-transform: uppercase; text-decoration: none; font-weight: bold; }
+/* line 637, ../sass/style.scss */
+#join-us .text { text-align: center; }
+/* line 640, ../sass/style.scss */
 #join-us p { padding: 0 20px; }
 
 /*FOOTER*/
-/* line 632, ../sass/style.scss */
+/* line 646, ../sass/style.scss */
 footer.container, .container { width: 100%; }
 
-/* line 637, ../sass/style.scss */
-footer.container { margin-top: 30px; padding: 30px 0; border-top: 1px dashed #aaa; color: #f7f5f1; }
-/* line 643, ../sass/style.scss */
+/* line 651, ../sass/style.scss */
+footer.container { padding: 30px 0; border-top: 1px dashed #aaa; color: #f7f5f1; }
+/* line 656, ../sass/style.scss */
 footer.container .copy { padding-top: 232px; float: left; }
-/* line 648, ../sass/style.scss */
+/* line 661, ../sass/style.scss */
 footer.container aside { float: right; margin: 50px 0 0 0; }
-/* line 652, ../sass/style.scss */
+/* line 665, ../sass/style.scss */
 footer.container aside h2 { color: #f7f5f1; font-size: 60px; line-height: 30px; margin: 40px 0; text-transform: uppercase; }
-/* line 659, ../sass/style.scss */
-footer.container aside ul.sovial-icon { list-style: none; margin: 0px; padding: 0px; }
-/* line 663, ../sass/style.scss */
-footer.container aside ul.sovial-icon li { height: 100px; padding: 0 4px; background: url(/images/social-icon-footer.png) center top no-repeat; }
-/* line 667, ../sass/style.scss */
-footer.container aside ul.sovial-icon li a { color: transparent; padding: 10px 10px 80px; }
 /* line 672, ../sass/style.scss */
+footer.container aside ul.sovial-icon { list-style: none; margin: 0px; padding: 0px; }
+/* line 676, ../sass/style.scss */
+footer.container aside ul.sovial-icon li { height: 100px; padding: 0 4px; background: url(/images/social-icon-footer.png) center top no-repeat; }
+/* line 680, ../sass/style.scss */
+footer.container aside ul.sovial-icon li a { color: transparent; padding: 10px 10px 80px; }
+/* line 685, ../sass/style.scss */
 footer.container aside ul.sovial-icon .facebook { background-position: -177px 0; }
-/* line 675, ../sass/style.scss */
+/* line 688, ../sass/style.scss */
 footer.container aside ul.sovial-icon .twitter { background-position: -8px 0; }
-/* line 678, ../sass/style.scss */
+/* line 691, ../sass/style.scss */
 footer.container aside ul.sovial-icon .google { background-position: -97px 0; }
